Fixed table style and isso wrap style and isso avatar width

--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -242,8 +242,14 @@ nav
 
       .hljs-keyword, .hljs-selector-tag
         font-weight: bold
-    td
-      padding: 5px
+    table
+      table-layout: fixed
+      width: 100%
+      word-wrap: break-word
+    td, th
+      padding: 0.5em
+    tr:nth-child(odd)
+      background-color: rgba(0, 0, 0, 0.1)
     a
       color: $font-color
       text-decoration: none
@@ -254,9 +260,6 @@ nav
       padding: 0 3% 1%
       font-size: 2em
       font-weight: bold
-      @media screen and ( min-width: $middle-wide )
-        td
-          padding: 0.2em
       @media screen and ( max-width: $middle-small-wide )
         padding: 0 5% 3%
       @media screen and ( max-width: $middle-smallest-wide )
@@ -540,12 +543,12 @@ $nav-box-light-nor: rgba(0, 0, 0, 0.2)
     @media screen and ( max-width: $middle-smallest-wide )
       flex-direction: row
   .avatar
-    width: 7%
+    width: 7em
     float: left
     display: block
     margin: 1em 1em 1em 0
     @media screen and ( max-width: $middle-smallest-wide )
-      width: 80px
+      width: 4em
       margin: .5em
       float: none
     img, svg.anonymous, svg.author
@@ -557,6 +560,9 @@ $nav-box-light-nor: rgba(0, 0, 0, 0.2)
       width: 20%
       float: right
       text-align: center
+      @media screen and ( max-width: $middle-smallest-wide )
+        line-height: 1.3
+        margin-top: -0.4em
       svg
         width: 100%
         height: 30%
@@ -570,14 +576,13 @@ $nav-box-light-nor: rgba(0, 0, 0, 0.2)
         cursor: pointer
   .content
     flex: 1
-    max-width: 93%
-    overflow: hidden
     .text code
       display: block
       padding: 0.5em
       overflow: auto
     .information
       margin: 0.6em 0
+      word-wrap: break-word
       span:after
         content: "•"
         margin: 0 0.3em
